--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo-square.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="The first platform created to make your mental health a priority. uSupport provides personalized, discreet and fast psychological care for your overall well-being."
+    />
     <title>uSupport Client</title>
   </head>
   <body>
